--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "format": "prettier --write .",
     "start": "next start",
     "type-check": "tsc"
   },
@@ -15,6 +16,7 @@
     "@types/node": "^12.20.55",
     "@types/react": "^17.0.67",
     "@types/react-dom": "^17.0.21",
+    "prettier": "^3.0.3",
     "typescript": "^4.9.5"
   }
 }
