--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "next",
     "build": "next build",
     "format": "prettier --write .",
+    "lint": "next lint",
     "start": "next start",
     "type-check": "tsc"
   },
@@ -16,6 +17,8 @@
     "@types/node": "^12.20.55",
     "@types/react": "^17.0.67",
     "@types/react-dom": "^17.0.21",
+    "eslint": "8.50.0",
+    "eslint-config-next": "13.5.4",
     "prettier": "^3.0.3",
     "typescript": "^4.9.5"
   }
